--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,7 +45,8 @@ repositories {
 }
 
 dependencies {
-    implementation ('org.jitsi.react:jitsi-meet-sdk:2.10.0') {
-      transitive = true
+    implementation ('org.jitsi.react:jitsi-meet-sdk:2.10.0') { 
+      exclude group: 'com.facebook', module:'hermes' 
+      transitive = true 
     }
 }
